Fixed mobile alignment

--- a/src/index.css
+++ b/src/index.css
@@ -289,6 +289,12 @@ button:focus-visible {
   }
 
   button {
-    background-color: #f9f9f9;
+    background-color: var(--color-baby-pink);
   }
 }
+
+/* @media screen and (max-width: 765px) and (min-width: 501px){
+  #row2{
+    margin:0 auto !important;
+  }
+} */
